src/scss/entry/avatar.scss
/* ... */
#advanced-customization-btn {
    display: flex;
    margin: {
        left: auto;
        top: 30px;
    }
}

#UserAvatar {
    transition: filter 0.3s ease;
    body:has(.advanced-customization-modal) & {
        filter: blur(15px);
    }
}

[data-rosealfe-imageresolutionoverride] {
    .page-content {
        thumbnail-2d,
        .thumbnail-2d-container {
            height: 100%;
            width: 100%;
        }
    }
}

[data-rosealfe-avataritemlists] {
    #avatar-web-app[data-has-item-lists] #horizontal-tabs {
        display: grid;
        grid-template-columns: repeat(auto-fit, minmax(min(100%/7), 1fr));
        margin: 0;

        &::before {
            display: none;
        }

        .rbx-tab {
            width: auto;
        }
    }
}

.edit-item-lists-btn {
    float: right;
}

.edit-item-lists-modal {
    .item-lists-layout {
        display: flex;
        flex-direction: column;
        gap: 2px;
        max-height: 700px;

        padding: {
            top: 6px;
            bottom: 6px;
        }

        .item {
            cursor: pointer;

            &.is-dragging {
                opacity: 0.3;
            }

            &.is-drop-target {
                opacity: 0.7;
            }

            .item-list-item {
                display: flex;
                gap: 3px;
            }
        }

        .drop-placeholder {
            width: 100%;
            margin: {
                // 1/2 of flex gap (6/2) + 1/2 of height (2/2) for top and bottom
                bottom: -2px;
                top: -2px;
            }

            .drop-placeholder-item {
                height: 2px;
                .dark-theme & {
                    background: lightblue;
                }

                .light-theme & {
                    background: blue;
                }
            }
        }

        .group-items-container {
            padding-left: 16px;

            .drop-placeholder {
                margin: {
                    // 1/2 of height (2/2) for top and bottom
                    bottom: -1px;
                    top: -1px;
                    left: 3px;
                }
            }
        }
    }
}

.edit-item-list-popup {
    padding: 6px;

    .list-btns-container {
        display: flex;
        padding-top: 6px;
        gap: 10px;
        justify-content: end;

        &.has-delete-btn {
            justify-content: center;
        }
    }
}

.roseal-search-filters {
    display: flex;
    margin-bottom: 5px;

    &.half-width {
        width: 75%;
    }

    .roseal-filters-container {
        margin-bottom: 0;
    }

    .keyword-filter {
        height: 32px;

        .keyword-filter-input {
            border-radius: 8px !important;
            height: 32px;
        }

        .input-addon-btn {
            height: 32px;
        }
    }
}

[data-rosealfe-avatareditorsearch] {
    #avatar-web-app {
        input.form-control.input-field[type="text"]:not(.roseal-search-filters input) {
            display: none;
        }
    }
}

#post-avatar-btn-container,
#post-avatar-btn:not(.has-error) {
    margin-top: 30px;
    float: left;
}

.post-avatar-modal {
    .post-avatar-data {
        margin-bottom: 5px;
        display: flex;
        flex-direction: column;
        gap: 1em;

        .input-field {
            margin-top: 2px;
        }
    }
}

#currently-wearing-items {
    display: flex;
    flex-wrap: wrap;
    gap: 3px;
    margin-top: 10px;
    max-height: 435px;

    .list-item {
        padding: 0;
        cursor: pointer;

        .item-card-caption {
            padding: 0;
        }

        &,
        .item-card-container,
        .item-card-thumb-container,
        .item-card-thumb,
        .item-card-equipped {
            width: 67px;
            min-width: 67px;
            max-width: 67px;

            height: 67px;
            min-height: 67px;
            max-height: 67px;
        }

        .icon-check-selection {
            margin: 0;
        }
    }
}

[data-rosealfe-avatareditorcurrentlywearing] {
    .left-wrapper,
    .left-wrapper-placeholder {
        min-height: 600px;
        height: fit-content;
    }
}

